--- a/src/MariSocketClient/MariSocketClient.csproj
+++ b/src/MariSocketClient/MariSocketClient.csproj
@@ -1,16 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MariGlobals" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="MariGlobals">
-      <HintPath>..\..\external\MariGlobals.dll</HintPath>
-    </Reference>
   </ItemGroup>
 </Project>
