--- a/src/MariSocketClient/MariSocketClient.csproj
+++ b/src/MariSocketClient/MariSocketClient.csproj
@@ -2,10 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PackageId>MariSocketClient</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>renanrcp</Authors>
+    <Company>MariBot</Company>
+    <Description>Mari websocket's client side implementation.</Description>
+    <Copyright>2019 - 2020 renanrcp. All rights reserved.</Copyright>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageIcon>msocketclient.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MariGlobals" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="msocketclient.png" Pack="true" Visible="false" PackagePath="" />
   </ItemGroup>
 </Project>
